# cpplearning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/basic/: errprint.h  iPointer.h  timetest.h
src/: errprint.cpp  functions.cpp  leapyear.cpp  strs.cpp  structs.cpp  timetest.cpp
src_algorithm/: leapyear.cpp
src_basic/: PointerTest.cpp  cerrtest.cpp  functionstest.cpp  strstest.cpp  timetest.cpp
